# Colocar_cond_em_grupo

./: .gitmodules  build.cmd  colocar_cond_grupo.spec  configuracao.json  main.py  modelo_para_adicionar_no_gp_condominio  pyproject.toml  remover_do_grupo.csv  version.py  version_info.txt
pacote_para_execucao/: .env
