[tool.poetry]
name = "colocar-cond-em-grupo"
version = "0.1.0"
description = ""
authors = ["rafaelmoreno-estasa <rafaelmoreno.estasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.3"
pyinstaller = "^6.12.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
